# family_tree_app

./: .editorconfig  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Makefile  PROJECT_CHARTER.md  README.md  SECURITY.md  assignment.txt  docker-compose.dev.yml  docker-compose.yml  extra_requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
Documentation/: pyFamilyTree requirements.docx
Documentation/Phase 1/: Copy of PyFamilyTree SRS.docx  Phase 1 Presentation.pptx  Phase 1 Requirements.docx  PyFamilyTree SRS.docx
Documentation/Phase 1/SRS Examples/: links.docx
Documentation/Phase 1/SRS Formats/: software-requirement-document-template.docx
Documentation/Phase 1/Specific Requirements/: Use Case Descriptions.docx  user stories.docx
Documentation/Phase 1/Specific Requirements/Visio files/: Activity Diagram - Administer Family Tree.vsdx  Activity Diagram - Edit Profile.vsdx  Activity Diagram - Manage Cloud Storage.vsdx  Activity Diagram - New User Activation.vsdx  Activity Diagram - Search Family Tree.vsdx  Activity Diagram - Update and Share Media.vsdx  Use Case - System Diagram.vsdx
Documentation/Phase 2/: Phase II deliverables.docx  SDD - PyFamilyTree.docx  presentation.pptx
Documentation/Phase 3/: Phase III Document.docx  Phase III Requirements.docx
docs/: ROADMAP.md
docs/adr/: 0001-django-framework-choice.md  0002-relationship-calculation-algorithm.md  0003-family-tree-visualization-approach.md  0004-data-import-export-strategy.md  template.md
docs/guides/: README.md
family_tree_app/: manage.py
family_tree_app/family_tree/: apps.py  models.py  views.py
family_tree_app/family_tree_app/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
family_tree_app/family_tree_project/: settings.py  urls.py
project/family_tree_app/: apps.py  models.py  views.py
project/family_tree_project/: settings.py  urls.py
source/accounts/: __init__.py  admin.py  api.py  api_urls.py  cache.py  dash_apps.py  forms.py  models.py  repositories.py  services.py  signals.py  urls.py  views.py
source/accounts/dash_apps/: family_tree.py
source/accounts/database/: __init__.py  connection.py
source/accounts/migrations/: 0001_initial.py  0002_auto_20180616_1933.py  0003_alter_activation_id.py  0004_country_eventtype_familytree_filetable_location_and_more.py  0005_familytree_super_admin_alter_familytree_name_member_and_more.py  0006_alter_activation_user_delete_user.py  0007_auto_20230505_1219.py  0008_remove_user_permission_role_remove_user_user_and_more.py  0009_alter_person_id_alter_user_id.py
source/accounts/templates/accounts/: add_family_member.html  cloud_storage.html  edit_person_information.html  family_member.html  family_tree.html  family_tree_create.html  family_tree_invitation.html  family_tree_management.html  invite_sent.html  person.html  sign_up.html  user_dashboard.html
source/app/: settings.py  urls.py
source/app/conf/development/: settings.py
source/content/static/css/: family_tree.css  styles.css
source/content/templates/main/: index.html
source/main/: views.py
tests/: conftest.py
tests/integration/: test_api.py
tests/performance/: test_performance.py
tests/unit/: test_repositories.py  test_services.py
(+1 files in other folders)
